# pb-assist

./: BUILD-SPEC.md  GEMINI.md  pb-assist-architecture-diagram.html  pyproject.toml
pb_assist/: __init__.py
reference/ians/: metadata.yaml
reference/mandiant-ir/: metadata.yaml
reference/nist-sp-800-61r3/: metadata.yaml
reference/nist-sp-800-61r3/excerpts/: section-3.3-containment.md
reference/org-doctrine/: metadata.yaml
reference/sans-ih/: metadata.yaml
templates/: appendix-structure.yaml  docx-style.yaml  headings.yaml  standard-ir.yaml
